--- a/_texts/p143r_1.md
+++ b/_texts/p143r_1.md
@@ -11,7 +11,7 @@ categories: []
 tags: []
 ---
 
- <br/>- - - - - <a href="http://gallica.bnf.fr/ark:/12148/btv1b10500001g/f291.image"><img src="https://tcatapano.github.io/GR8975-edition/assets/photo-icon.png" alt="folio image: " style="display:inline-block; margin-bottom:-3px;"/>143r</a> - - - - - <br/> 
+ <br/>- - - - - <a href="http://gallica.bnf.fr/ark:/12148/btv1b10500001g/f291.image"><img src="https://github.com/tcatapano/assets/photo-icon.png" alt="folio image: " style="display:inline-block; margin-bottom:-3px;"/>143r</a> - - - - - <br/> 
 ## Moulding turtles and tortoises
 
  
