--- a/_texts/p002r_2.md
+++ b/_texts/p002r_2.md
@@ -14,7 +14,7 @@ materials: [Turpentine oil, oil of Jacob, salt from cabbage ashes]
 tools: []
 ---
 
- <div class="folio" align="center">- - - - - <a href="http://gallica.bnf.fr/ark:/12148/btv1b10500001g/f9.image" target="_blank"><img src="https://tcatapano.github.io/GR8975-edition//assets/photo-icon.png" style="display:inline-block; margin-bottom:-3px;"/>p002r</a> - - - - - </div> 
+ <div class="folio" align="center">- - - - - <a href="http://gallica.bnf.fr/ark:/12148/btv1b10500001g/f9.image" target="_blank"><img src="https://cu-mkp.github.io/GR8975-edition//assets/photo-icon.png" style="display:inline-block; margin-bottom:-3px;"/>p002r</a> - - - - - </div> 
 ## Against pain
 
  <span class="activity"></span>  <span class="material">Turpentine oil</span>, <span class="material">oil of Jacob</span> and <span class="material">salt from cabbage ashes</span>. 
